--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <!---video 1 30min --> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Ecoleta</title>
+
+    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+
+
+  </head>
+
 <body>
-    30 minutos video 1
+  
+<h3>Ecoleta </h3>
+<a href="">Cadastre um ponto de coleta</a>  
+
+<h1>Seu marketplace de coleta de resíduos</h1>
+
+<p>  Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.
+</p>
+
+<button>Pesquisar pontos de coleta</button>
+  
+  
+  
+
 </body>
 </html>
