--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <!---video 1 30min --> 
-<head>
+   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecoleta</title>
 
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+   </head>
 
+   <body>
+   <div>
+     <h3>Ecoleta </h3>
+     <a href="">Cadastre um ponto de coleta</a>  
 
-  </head>
+     <h1>Seu marketplace de coleta de resíduos</h1>
 
-<body>
+     <p>  Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.
+     </p>
+
+     <button>Pesquisar pontos de coleta</button>
+   </div>
   
-<h3>Ecoleta </h3>
-<a href="">Cadastre um ponto de coleta</a>  
 
-<h1>Seu marketplace de coleta de resíduos</h1>
-
-<p>  Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.
-</p>
-
-<button>Pesquisar pontos de coleta</button>
   
   
   
