assets-pages layout

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
    </head>
 
    <body>
-   <div>
-     <h3>Ecoleta </h3>
-     <a href="">Cadastre um ponto de coleta</a>  
+   <div class="content">
+      <header>
 
+        <h3>Ecoleta </h3>
+        <a href="">Cadastre um ponto de coleta</a>
+          
+
+
+
+      </header>
+     
      <h1>Seu marketplace de coleta de resíduos</h1>
 
      <p>  Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.
